[BUGFIX] Avoid clipping of footer meta menu focus styles

--- a/Resources/Public/Css/bootstrap5-rte.css
+++ b/Resources/Public/Css/bootstrap5-rte.css
@@ -15363,10 +15363,6 @@ fieldset.form-group > *:last-child {
   margin-bottom: .5rem;
 }
 
-.footer-meta {
-  overflow: hidden;
-}
-
 .footer-meta .meta-menu {
   margin: 0;
   list-style: none;
